force-app/main/default/objects/IntegrationSyncEvent__e/IntegrationSyncEvent__e.object-meta.xml
<CustomObject>
    <label>Integration Sync Event</label>
    <pluralLabel>Integration Sync Events</pluralLabel>
</CustomObject>