force-app/main/default/objects/IntegrationSyncEvent__e/fields/ObjectType__c.field-meta.xml
<CustomField>
    <fullName>ObjectType__c</fullName>
    <description>Type of object being synchronized</description>
    <label>Object Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>