force-app/main/default/objects/IntegrationSyncEvent__e/fields/SourceOrg__c.field-meta.xml
<CustomField>
    <fullName>SourceOrg__c</fullName>
    <description>Source organization identifier</description>
    <label>Source Org</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>