force-app/main/default/objects/IntegrationSyncEvent__e/fields/TargetOrg__c.field-meta.xml
<CustomField>
    <fullName>TargetOrg__c</fullName>
    <description>Target organization identifier</description>
    <label>Target Org</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>